# musix_player

./: Cargo.toml  LICENSE  README.md
data/sc68/: sc68.cfg
src/: main.rs
