[package]
name = "musix_player"
version = "0.1.1"
authors = ["Jonas Minnberg <sasq64@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Minimal music player example using the musix library"
homepage = "https://github.com/sasq64/musix_player"
[dependencies]
musix = "0.2.4"
cpal = "0.15.3"

